# SOIL

./: .gitignore  .travis.yml  CMakeLists.txt  FindSOILCPP.cmake  README.md  SOIL.md  conanfile.py  conanfile.txt
src/: SOIL.c  SOIL.cpp  SOIL.hpp  image_DXT.cpp  image_DXT.hpp  image_helper.cpp  image_helper.hpp  stb_image_aug.c  stb_image_aug.cpp  stb_image_aug.hpp  stbi_DDS_aug.hpp  stbi_DDS_aug_c.hpp
test_package/: CMakeLists.txt  conanfile.py  test.cpp
